@@ -242,6 +242,16 @@ nav {
     color: white !important;
 }
 
+#live.thumbnail .gamingtv a div {
+    background: rgba(27, 28, 28, 0.7);
+    color: rgb(236, 82, 0);
+}
+
+.gamingtv a:hover, .thumbnail .gamingtv a:hover div {
+    background: rgb(27, 28, 28) !important;
+    color: rgb(236, 82, 0) !important;
+}
+
 /* Icon font from fontello */
 .icon {
     font-family: "extra-glyphs";
