@@ -4,6 +4,7 @@
  * @license MPL-2.0
  * @module provider-events
  */
+"use strict";
 
 const { Class: newClass } = require("sdk/core/heritage");
 const { EventTarget } = require("sdk/event/target");
