@@ -16,4 +16,4 @@ exports.mlg        = require("./providers/mlg");
 exports.azubu      = require("./providers/azubu");
 exports.beam       = require("./providers/beam");
 exports.picarto    = require("./providers/picarto");
-
+exports.gamingtv   = require("./providers/gamingtv");
