@@ -27,6 +27,7 @@ provider_mlg=MLG.tv
 provider_azubu=Azubu
 provider_beam=Beam
 provider_picarto=Picarto.TV
+provider_gamingtv=GamingTV
 
 provider_twitch_hosted=%s hosting %s
 provider_picarto_multistream=Multistream
